# trabalho-apachespark

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
delta/: delta_lake.ipynb  index.html
docs/: delta.md  iceberg.md  index.md  spark.md
iceberg/: iceberg.ipynb  index.html
notebooks/: delta_lake.ipynb  iceberg.ipynb
search/: search_index.json
site/: index.html
site/iceberg/: index.html
site/search/: search_index.json
site/spark/: index.html
spark/: index.html
